# KafkaInRust

./: Cargo.toml  package-lock.json
src/: consumer.rs  main.rs  producer.rs
