[package]
name = "chatly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/producer.rs"


[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.8", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = {version = "0.4", features = ["cors"]}
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }

rdkafka = { version = "0.29", features = ["cmake-build"] }
